refactor: FV-104 - add missing @NotNull & @Nullable annotations